# software-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig
src/: _application.cpp  _asset_store.cpp  _camera.cpp  _color.cpp  _debug_rotate.cpp  _debug_texture.cpp  _ecs.cpp  _io.cpp  _math.cpp  _mesh.cpp  _mesh_render.cpp  _renderer.cpp  _texture.cpp  _tga.cpp  _time.cpp  _window.cpp  color.zig  main.cpp  main.zig  math.zig  mesh.zig  time.zig  window.zig
src/public/: _application.h  _asset_store.h  _camera.h  _color.h  _common.h  _debug_rotate.h  _debug_texture.h  _ecs.h  _io.h  _light.h  _math.h  _mesh.h  _mesh_render.h  _renderer.h  _texture.h  _tga.h  _time.h  _transform.h  _types.h  _window.h
